# inky-bird-frame

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.build.yaml  compose.yaml  config.example.toml  controller.env.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bird_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_workflow_pinning.py  review_gate.py
.github/workflows/: ci.yml  container.yml  deploy.yml  review-gate-retrigger.yml  review-gate.yml  site-deploy-hook.yml
catalog/: index.json
deploy/: install-controller-systemd.sh  install-controller-via-launchd.sh  install-controller.sh  install-display-local.sh  install-display-node.sh  uninstall-controller-systemd.sh  uninstall-controller.sh  uninstall-display-local.sh
deploy/apparmor/: inky-bird-frame-codex
docs/: architecture.md  discovery.md  docker.md  installation.md  notifications.md  operations.md  troubleshooting.md
src/inky_bird_frame/: __init__.py  birds.py  (+23 more)
tests/: conftest.py  test_birds.py  test_catalog.py  test_cli.py  test_codex_runner.py  test_config.py  test_controller.py  test_deployment_scripts.py  test_display.py  test_display_node.py  test_geo.py  test_http.py  test_images.py  test_installation.py  test_notifications.py  test_prompts.py  test_publisher.py  test_references.py  test_research.py  test_retry.py  test_review_gate_script.py  test_scheduler.py  test_selection.py  test_server.py  test_workflow_pinning_script.py
(+280 files in other folders)
